syntax = "proto2";

import "types.proto";

// Networked progress bar for displaying a remote request's operation status over time.
message NetProgress {
  // Number of total units until bar is complete.
  optional uint64 total = 1;
  // Number of total units processed thus far.
  optional uint64 position = 2;
}

// Client to server request for authenticating a client connection. This is the first message a
// SrvProtocol client will make to a SrvProtocol server.
//
// If the `secret_key` provided matches with what the server has then the client may continue
// sending requests. Connections will be aborted by the server if there is no match.  
message Handshake {
  // A shared secret between the destination server and the calling client.
  optional string secret_key = 1;
}

// Wrapper type for a list of ServiceBinds.
message ServiceBindList {
  repeated ServiceBind binds = 1;
}

// Request for retrieving the default configuration for a given service.
message SvcGetDefaultCfg {
  // Package identifier to target running service.
  optional PackageIdent ident = 1;
}

// Request to load a new service.
message SvcLoad {
  // Package identifier for the service to load. Using a more qualified identifier will load a
  // more specific package.
  optional PackageIdent ident = 1;
  // An application environment to place the service in.
  optional ApplicationEnvironment application_environment = 2;
  // List of service binds to use when configuring the service.
  repeated ServiceBind binds = 3;
  // Set to true if any binds were set by the caller. This field is needed because a blank list
  // and map will be present in a case when no binds were set *and* when binds are removed.
  optional bool specified_binds = 5;
  // Remote http URL for the Builder service to receive package updates from.
  optional string bldr_url = 6;
  // Remote channel on the Builder service to receive package updates from.
  optional string bldr_channel = 7;
  // A filepath on disk which can be specified to override the package's configuration and hooks.
  // This is useful when testing services on a local Supervisor before packaging them.
  optional string config_from = 8;
  // If set to true, any loaded service matching this request's package ident will be unloaded
  // and this request's will replace it.
  optional bool force = 9 [default = false];
  // Service group name for the service.
  optional string group = 10;
  // Encrypted password for a Windows service.
  optional string svc_encrypted_password = 11;
  // Topology which the service will run in.
  optional Topology topology = 12;
  // Update strategy for the service.
  optional UpdateStrategy update_strategy = 13;
}

// Request to unload a loaded service.
message SvcUnload {
  optional PackageIdent ident = 1;
}

// Request to start a loaded and stopped service.
message SvcStart {
  optional PackageIdent ident = 1; 
}

// Request to stop a loaded and started service.
message SvcStop {
  optional PackageIdent ident = 1;
}

// Request to retrieve the service status of one or all services.
message SvcStatus {
  // If specified, the reply will contain only the service status for the requested service. If
  // left blank then all services will report their status.
  optional PackageIdent ident = 1;
}

// A reply to various requests which contains a pre-formatted console line.
message ConsoleLine {
  optional string line = 2;
}

